feat: let binding inlining via compiler inlinedBody pattern
Clean architecture: compiler is the single source of truth.

Compiler changes:
- CompilationContext.letBindings: Map<String, ValueSpecification>
- compileBlock: enriches context with let bindings, sets inlinedBody
  on block node → last statement (transparent to PlanGenerator)
- compileVariable: for let-bound vars, sets inlinedBody → bound AST
- compileLet: standalone let value compilation
- Removed letAsLastStatement from dispatch (user function, not built-in)

PlanGenerator changes (minimal — follows existing inlinedBody pattern):
- generateRelation: universal inlinedBody check at top
- generateScalar: universal inlinedBody check at top

11 tests fixed: 3 scalar let, 1 relational let, 6 zip, 1 sort key
206 → 195 mismatches, 0 errors